Implement emailjs integration on the contact page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Alaa</title>
+    <title>Alaa Yousef</title>
 </head>
 <body>
     <header>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            Rosie Odenkirk
+                            Alaa Yousef
                         </p>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            17 Riverdale, Catskills, NY USA
+                            Mörnersväg 76A , Växjö Kronoberg Sweden
                         </p>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            555 204 1973
+                            0764196187
                         </p>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            rosie.odenkirk@hansaw.com
+                            alaa_shlbaieh@hotmail.com
                         </p>
                     </div>
                 </div>
